--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     <div class="collapse navbar-collapse" id="navbarasad">
                         <ul class="navbar-nav mb-2 mb-lg-0 text-white">
                             <li class="nav-item">
-                                <a href="#" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
+                                <a href="index.html" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
                             </li>
                             <li class="nav-item">
                                 <a href="about.html" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
+                                <a href="products.html" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link"> <i class="fa fa-handshake-o"></i> Contact</a>    
+                                <a href="contact.html" class="nav-link"> <i class="fa fa-handshake-o"></i> Contact</a>    
                             </li>
                         </ul>
                         <ul  class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -47,12 +47,12 @@
                                     <i class="fa fa-user-circle"></i> My Account
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                    <li><a class="dropdown-item" href="login.html">Login</a></li>
+                                    <li><a class="dropdown-item" href="register.html">Register</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="btn btn-sm btn-warning position-relative mt-1">
+                                <a href="cart.html" class="btn btn-sm btn-warning position-relative mt-1">
                                     <i class="fa fa-shopping-bag" aria-hidden="true"></i> Cart
                                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                                     99+
@@ -83,5 +83,53 @@
                 </div>
             </div>
         </section>
+        <div class="container mt-4">
+          <div class="row mt-2">
+              <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="card">
+                      <img src="https://via.placeholder.com/150" alt="Team Member 1" class="img-fluid mb-3">
+                      <div class="card-footer d-flex">
+                          <span>
+                              1000 PKR
+                          </span>
+                          <button class="btn btn-sm btn-danger ms-auto"> <i class="fa fa-cart-plus"></i> Add</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="card">
+                      <img src="https://via.placeholder.com/150" alt="Team Member 1" class="img-fluid mb-3">
+                      <div class="card-footer d-flex">
+                          <span>
+                              1000 PKR
+                          </span>
+                          <button class="btn btn-sm btn-danger ms-auto"> <i class="fa fa-cart-plus"></i> Add</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="card">
+                      <img src="https://via.placeholder.com/150" alt="Team Member 1" class="img-fluid mb-3">
+                      <div class="card-footer d-flex">
+                          <span>
+                              1000 PKR
+                          </span>
+                          <button class="btn btn-sm btn-danger ms-auto"> <i class="fa fa-cart-plus"></i> Add</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="card">
+                      <img src="https://via.placeholder.com/150" alt="Team Member 1" class="img-fluid mb-3">
+                      <div class="card-footer d-flex">
+                          <span>
+                              1000 PKR
+                          </span>
+                          <button class="btn btn-sm btn-danger ms-auto"> <i class="fa fa-cart-plus"></i> Add</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </div>
     </body>
 </html>
