--- a/about.html
+++ b/about.html
@@ -1,78 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/about.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    .hero-section {
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://via.placeholder.com/1920x600') no-repeat center center;
+      background-size: cover;
+      color: white;
+      padding: 150px 0;
+      text-align: center;
+    }
+    .hero-section h1 {
+      font-size: 4rem;
+    }
+    .about-section {
+      padding: 80px 0;
+    }
+    .team-member img {
+      border-radius: 50%;
+      height: 150px;
+      width: 150px;
+    }
+    .footer {
+      background-color: #000;
+      color: #fff;
+      padding: 40px 0;
+    }
+    .navbar-light .navbar-nav .nav-link {
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <div class="navbar">
-        <ul class="lister">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="about.html"> About </a></li>
-            <li><a href="products.html"> Products </a></li>
-            <li><a href="login.html"> Login </a></li>
-            <li><a href="contact.html"> Contact </a></li>
-        </ul>
-    </div> 
-    <br /> <br /> <br />
-    <hr />
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
+
+  <!-- Header Section -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <div class="container">
+        <a href="#" class="navbar-brand text-white">
+          <i class="fa fa-truck"></i> Asad Mukhtar
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarasad" aria-controls="navbarasad" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarasad">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link"> <i class="fa fa-pencil"></i> About</a>    
+            </li>
+            <li class="nav-item">
+              <a href="products.html" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link"> <i class="fa fa-handshake-o"></i> Contact</a>    
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa fa-user-circle"></i> My Account
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="login.html">Login</a></li>
+                <li><a class="dropdown-item" href="register.html">Register</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="btn btn-sm btn-warning position-relative mt-1">
+                <i class="fa fa-shopping-bag" aria-hidden="true"></i> Cart
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  99+
+                  <span class="visually-hidden">unread messages</span>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="container">
+      <h1>About Our Company</h1>
+      <p>Innovating Solutions for a Brighter Tomorrow</p>
     </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
+  </section>
+
+  <!-- About Section -->
+  <section class="about-section bg-light">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h2>Our Journey</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Curabitur ut turpis neque. Sed vitae risus ante. Donec vehicula cursus ante, a volutpat purus.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="https://via.placeholder.com/500x350" alt="About Image" class="img-fluid rounded">
+        </div>
+      </div>
     </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
+  </section>
+
+  <!-- Team Section -->
+  <section class="container py-5">
+    <h2 class="text-center mb-5">Our Leadership</h2>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Team Member 1" class="img-fluid mb-3">
+        <h5>John Doe</h5>
+        <p>CEO</p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Team Member 2" class="img-fluid mb-3">
+        <h5>Jane Smith</h5>
+        <p>COO</p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Team Member 3" class="img-fluid mb-3">
+        <h5>Michael Lee</h5>
+        <p>CTO</p>
+      </div>
     </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <p>© 2024 Your Company Name. All rights reserved.</p>
+      <p><a href="#" class="text-light">Privacy Policy</a> | <a href="#" class="text-light">Terms of Service</a></p>
     </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div class="box">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
-        <p>
-    </div>
-    <div id="box3"></div>
+  </footer>
+
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
