--- a/login.html
+++ b/login.html
@@ -1,17 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li><a href="index.html"> Home </a></li>
-        <li><a href="about.html"> About </a></li>
-        <li><a href="products.html"> Products </a></li>
-        <li><a href="login.html"> Login </a></li>
-        <li><a href="contact.html"> Contact </a></li>
-    </ul>
-</body>
+<html>
+    <head>
+        <title> Find it, Love it, Buy it | Asadstore.com</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <style>
+        .nav-link {
+            color:white !important;
+        }
+        .card {
+            border-radius: 0px !important;
+        }
+        .bg-c {
+            background-color: purple !important;
+        }
+    </style>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-c">
+                <div class="container">
+                    <a href="#" class="navbar-brand text-white">
+                       <i class="fa fa-truck"></i> Asad Mukhtar
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarasad" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarasad">
+                        <ul class="navbar-nav mb-2 mb-lg-0 text-white">
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="about.html" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="products.html" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="contact.html" class="nav-link"> <i class="fa fa-handshake-o"></i> Contact</a>    
+                            </li>
+                        </ul>
+                        <ul  class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-user-circle"></i> My Account
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="login.html">Login</a></li>
+                                    <li><a class="dropdown-item" href="register.html">Register</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="cart.html" class="btn btn-sm btn-warning position-relative mt-1">
+                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i> Cart
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                    99+
+                                    <span class="visually-hidden">unread messages</span>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="container mt-3">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="card-header bg-c text-white">
+                            <i class="fa fa-sign-in"></i> Login Here
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-envelope"></i> Email </label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="form-group mt-1">
+                                <label for=""><i class="fa fa-key"></i> Password </label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="form-group mt-2">
+                                <input type="checkbox"> Remember?
+                            </div>
+                        </div>
+                        <div class="card-footer d-flex">
+                            <button class="btn btn-danger btn-sm ms-auto"><i class="fa fa-sign-in"></i> Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
